src/snapshots/crossterm_serde__key_event_serde__testing__serlize.snap
---
source: src/key_event_serde.rs
expression: actual
---
(
    move_up: (
        code: "Up",
        modifiers: "NONE",
    ),
    move_down: (
        code: "Down",
        modifiers: "ALT",
    ),
    move_left: (
        code: "Left",
        modifiers: "ALT+CONTROL",
    ),
    move_right: (
        code: "Right",
        modifiers: "SUPER",
    ),
)
